--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ src_managed/
 project/boot/
 project/plugins/project/
 
+# gradle specific
+build/*
+
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
