scalaz was introduced

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ ext {
 dependencies {
   // scala library
   compile 'org.scala-lang:scala-library:2.11.7'
+  compile 'org.scalaz:scalaz-core_2.11:7.2.1'
 
   testCompile 'org.scalatest:scalatest_2.11:2.2.4'
   testCompile 'org.scalacheck:scalacheck_2.11:1.12.5'
